// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders a link 1`] = `
<a
  className="Van-Button"
  href="https://vandebron.nl"
>
  Button link
</a>
`;

exports[`<Button> renders big button size 1`] = `
<button
  className="Van-Button Van-Button--big"
>
  My button
</button>
`;

exports[`<Button> renders circle button 1`] = `
<button
  className="Van-Button Van-Button--circle"
>
  <span
    className="Van-Icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
      }
    }
  />
</button>
`;

exports[`<Button> renders compact button size 1`] = `
<button
  className="Van-Button Van-Button--compact"
>
  My button
</button>
`;

exports[`<Button> renders danger button 1`] = `
<button
  className="Van-Button Van-Button--danger"
>
  My button
</button>
`;

exports[`<Button> renders disabled button 1`] = `
<button
  className="Van-Button"
  disabled={true}
>
  My button
</button>
`;

exports[`<Button> renders facebook button 1`] = `
<button
  className="Van-Button Van-Button--facebook"
>
  My button
</button>
`;

exports[`<Button> renders full button 1`] = `
<button
  className="Van-Button Van-Button--full"
>
  My button
</button>
`;

exports[`<Button> renders grayscale button 1`] = `
<button
  className="Van-Button Van-Button--grayscale"
>
  My button
</button>
`;

exports[`<Button> renders info button 1`] = `
<button
  className="Van-Button Van-Button--info"
>
  My button
</button>
`;

exports[`<Button> renders inverted button 1`] = `
<button
  className="Van-Button Van-Button--inverted"
>
  My button
</button>
`;

exports[`<Button> renders primary button 1`] = `
<button
  className="Van-Button Van-Button--primary"
>
  My button
</button>
`;

exports[`<Button> renders primary button if does not pass a theme 1`] = `
<button
  className="Van-Button"
>
  My button
</button>
`;

exports[`<Button> renders small button size 1`] = `
<button
  className="Van-Button Van-Button--small"
>
  My button
</button>
`;

exports[`<Button> renders small square button with an Icon 1`] = `
<button
  className="Van-Button Van-Button--square"
>
  <span
    className="Van-Icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
      }
    }
  />
</button>
`;

exports[`<Button> renders square button 1`] = `
<button
  className="Van-Button Van-Button--square"
>
  My button
</button>
`;

exports[`<Button> renders square button with an Icon 1`] = `
<button
  className="Van-Button Van-Button--square"
>
  <span
    className="Van-Icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
      }
    }
  />
  <span
    className="Van-Button-text"
  >
    My button
  </span>
</button>
`;

exports[`<Button> renders success button 1`] = `
<button
  className="Van-Button Van-Button--success"
>
  My button
</button>
`;

exports[`<Button> renders warning button 1`] = `
<button
  className="Van-Button Van-Button--warning"
>
  My button
</button>
`;

exports[`<Button> renders with button on the left 1`] = `
<button
  className="Van-Button"
>
  <span
    className="Van-Icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
      }
    }
  />
  <span
    className="Van-Button-text"
  >
    My button
  </span>
</button>
`;

exports[`<Button> renders with button on the right 1`] = `
<button
  className="Van-Button"
>
  <span
    className="Van-Button-text"
  >
    My button
  </span>
  <span
    className="Van-Icon"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
      }
    }
  />
</button>
`;

exports[`<Button> renders with specific className 1`] = `
<button
  className="Van-Button my-class"
>
  My button
</button>
`;

exports[`<Button> renders with specific className 2`] = `
<button
  className="Van-Button"
  data-id="0"
>
  My button
</button>
`;
